[tool.poetry]
name = "bootcamp-python-aula07-parte2"
version = "0.1.0"
description = ""
authors = ["Washington Vieira <wv817816@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.4"
pandas = "^2.2.3"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
